test_translator/tests/data/checkpoint_2/core/fail/02_dict_tuple_keys/solution.py
def get_tuple_dict():
    return {(1, 2): "x", (3, 4): "WRONG"}

def lookup_coord(d, key):
    return d[key]
